unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/n2de__Distributor_rr_sa__c.object-meta.xml
<CustomObject>
    <label>Distributor rr-sa</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor rr-sa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>