unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__Distribution_team_member__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_team_member__c</fullName>
    <label>Distribution team member</label>
    <referenceTo>n2de__Team_member__c</referenceTo>
    <relationshipLabel>Distributor rr-sa</relationshipLabel>
    <relationshipName>Distributor_rr_sa</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>