unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__Is_ooo__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_ooo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is OOO</label>
    <type>Checkbox</type>
</CustomField>