unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__Is_sticky__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_sticky__c</fullName>
    <formula>IF(AND(CONTAINS(TEXT(n2de__Distributor__r.n2de__Algorithm__c), &#39; sticky &#39;), NOT(n2de__Is_ooo__c)), ((NOW()-CreatedDate)*1440) &lt; n2de__Distributor__r.n2de__Sticky_period_minutes__c, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is sticky</label>
    <type>Checkbox</type>
</CustomField>