unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__Matched_assignments__c.field-meta.xml
<CustomField>
    <fullName>n2de__Matched_assignments__c</fullName>
    <label>Matched assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>