unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__Object_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_name__c</fullName>
    <label>Object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>