unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__Redundant__c.field-meta.xml
<CustomField>
    <fullName>n2de__Redundant__c</fullName>
    <formula>((NOW()-CreatedDate)*1440) &gt; (n2de__Distributor__r.n2de__Sticky_period_minutes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Redundant</label>
    <type>Checkbox</type>
</CustomField>