unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__Team__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution team</label>
    <referenceTo>n2de__Team__c</referenceTo>
    <relationshipLabel>Distributor rr-sa</relationshipLabel>
    <relationshipName>Distributor_rr_sa</relationshipName>
    <type>Lookup</type>
</CustomField>