unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__Unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>n2de__Unique_identifier__c</fullName>
    <label>Unique identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>