unpackaged/main/default/objects/n2de__Distributor_rr_sa__c/fields/n2de__User__c.field-meta.xml
<CustomField>
    <fullName>n2de__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distributor_rr_sa</relationshipName>
    <type>Lookup</type>
</CustomField>